[package]
name = "infratk"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
camino = "1.1.7"
clap = { version = "4.5.15", features = ["derive", "env"] }
git_cmd = "0.6.9"
inquire = "0.7.5"
regex = "1.10.6"
secrecy = "0.8.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
